# recommender_aueb

./: README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
archive/src/: main.py
archive/src/helper_functions/: restaurant_generator.py  users_generator.py
data/processed/: test.csv
notebooks/: Generator_v2.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
setup/: Dockerfile  Dockerfile_api  Dockerfile_dev  Dockerfile_ui  conda_env.yml  requirements.txt
src/: app.py  main.py  main_app.py  main_app_backup.py  streamlit_app.py
src/recommender_app/generators/: __init__.py  restaurant_generator.py  segment_generator.py  users_generator.py
src/recommender_app/ml/: modelling.py
src/recommender_app/preprocessing/: process.py
src/recommender_app/utils/: input_args.py  mlflow_utils.py  variables.py
src/streamlit_interface/: Home.py
src/streamlit_interface/pages/: 1_📊_Dashboard.py  2_🚀_Batch_Predictor.py  2_🚀_Predictor.py  3_🚀_Real_Time_Predictor.py  4_🍽️_Generator.py
tests/: test_restaurant_generator.py
