[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost==1.2",
    "ipython==8.20.0",
    "mlflow==3.10.1",
    "numpy==1.26.4",
    "pandas==2.1.4",
    "scikit-learn==1.2.2",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
    "jupyterlab>=4.5.0",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-rise>=0.43.1",
    "pipreqs>=0.4.13",
]
